--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Life Less Wasteful",
+    "name": "llw",
     "description": "Custom theme for the Life Less Wasteful blog",
     "version": "1.0.0",
     "engines": {
@@ -29,7 +29,7 @@
     "scripts": {
         "dev": "concurrently \"npm run sync\" \"npm run nodemon\" \"npm run watch\" \"npm run sass\"",
         "sync": "browser-sync start --port 4444 --proxy http://localhost:2369 --files 'assets/**/*' --no-ghost-mode",
-        "nodemon": "cd ../../.. && nodemon current/index.js --watch content/themes/discoverer --ext hbs",
+        "nodemon": "cd ../../.. && nodemon current/index.js --watch content/themes/llw --ext hbs",
         "watch": "webpack --watch --progress",
         "sass": "gulp watch",
         "start": "gulp"
