--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
         "theme"
     ],
     "scripts": {
-        "dev": "concurrently \"npm run sync\" \"npm run nodemon\" \"npm run watch\" \"npm run sass\"",
-        "sync": "browser-sync start --port 4444 --proxy http://localhost:2368 --files 'assets/**/*' --no-ghost-mode",
+        "dev": "concurrently 'npm run sync' 'npm run nodemon' 'npm run watch' 'npm run sass'",
+        "sync": "browser-sync start --port 4444 --proxy http://localhost:2368 --files 'assets/**/*' '**/*.hbs' --reload-delay 900 --no-ghost-mode",
         "nodemon": "cd ../../.. && nodemon current/index.js --watch content/themes/llw --ext hbs",
         "watch": "webpack --watch --progress",
-        "sass": "gulp watch",
-        "start": "gulp"
+        "sass": "gulp watch"
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
